--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,53 +1,6 @@
-[tasks.lint]
-description = "Apply lint"
-command = "cargo"
-args = ["clippy", "--all-features", "--all-targets", "--", "--deny", "warnings"]
-dependencies = [
-    "fmt-check", "sort-check",
+extend = [
+    { path = "dev/makefiles/format_makefile.toml"},
+    { path = "dev/makefiles/lint_makefile.toml"},
+    { path = "dev/makefiles/test_makefile.toml"},
 ]
-
-[tasks.fmt-check]
-description = "Check format"
-command = "cargo"
-args = ["fmt", "--check"]
-
-[tasks.sort-check]
-description = "Check if Cargo.toml dependencies sorted"
-install_crate = { crate_name = "cargo-sort"}
-command = "cargo"
-args = ["sort", "--workspace", "--check"]
-
-
-[tasks.sort]
-description = "sort Cargo.toml dependencies"
-install_crate = { crate_name = "cargo-sort"}
-command = "cargo"
-args = ["sort", "--workspace"]
-
-[tasks.fmt]
-dependencies = [
-    "fmt::toml",
-    "fmt::rs",    
-]
-
-[tasks."fmt::toml"]
-install_crate = { crate_name = "taplo-cli" }
-command = "taplo"
-args = ["fmt", "Cargo.toml", "Makefile"]
-
-[tasks."fmt::rs"]
-toolchain = "nightly"
-command = "cargo"
-args = ["fmt"]
-
-[tasks.test]
-description = "Run nextest"
-install_crate = { crate_name = "cargo-nextest"}
-command = "cargo"
-args = ["nextest", "run"]
-
-[tasks.install-tools]
-description = "Install tools"
-command = "cargo"
-args = ["install", "cargo-nextest", "cargo-criterion", "cargo-sort", "cargo-readme"]
 
