--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,6 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: dtolnay/rust-toolchain@stable
+    - uses: davidB/rust-cargo-make@v1
     - uses: actions-rs/install@master
       with:
         crate: cargo-sort
